[package]
name = "helipad"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "helipad"
path = "src/bin/main.rs"

[lib]
name = "helipad"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
duct = "0.13"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_ignored = "0.1"
structopt = { version = "0.3", default-features = false }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
dunce = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
rpath = false
debug-assertions = false
